--- a/owncloudData/build.gradle
+++ b/owncloudData/build.gradle
@@ -70,3 +70,11 @@ dependencies {
         exclude module: 'objenesis'
     }
 }
+
+configurations.all {
+    resolutionStrategy.eachDependency { details ->
+        if (details.requested.group == 'androidx.arch.core' && !details.requested.name.contains('core-runtime')) {
+            details.useVersion "2.0.1"
+        }
+    }
+}
