--- a/owncloudDomain/build.gradle
+++ b/owncloudDomain/build.gradle
@@ -65,3 +65,11 @@ allOpen {
     // allows mocking for classes w/o directly opening them for release builds
     annotation 'com.owncloud.android.testing.OpenClass'
 }
+
+configurations.all {
+    resolutionStrategy.eachDependency { details ->
+        if (details.requested.group == 'androidx.arch.core' && !details.requested.name.contains('core-runtime')) {
+            details.useVersion "2.0.0"
+        }
+    }
+}
