--- a/owncloudData/build.gradle
+++ b/owncloudData/build.gradle
@@ -41,6 +41,7 @@ android {
 
 dependencies {
     implementation project(':owncloudDomain')
+    testImplementation project(':owncloudTestUtil')
 
     // Owncloud Android Library
     api project(':owncloud-android-library:owncloudComLibrary')
