--- a/owncloudDomain/build.gradle
+++ b/owncloudDomain/build.gradle
@@ -41,6 +41,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    testImplementation project(':owncloudTestUtil')
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
 
