--- a/owncloudApp/src/debug/AndroidManifest.xml
+++ b/owncloudApp/src/debug/AndroidManifest.xml
@@ -20,7 +20,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <application tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name="com.owncloud.android.presentation.sharing.shares.views.TestShareFileActivity"></activity>
+        <activity android:name="com.owncloud.android.sharing.shares.ui.TestShareFileActivity"></activity>
     </application>
 
 </manifest>
