--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,34 @@
 buildscript {
     ext {
+
+
         // Android jetpack
-        archLifecycleVersion = '2.1.0'
-        roomVersion = '2.1.0'
+        archLifecycleVersion = "2.1.0"
+        roomVersion = "2.2.1"
+        appCompat = "1.1.0"
 
         // Kotlin
-        kotlinVersion = '1.3.50'
+        kotlinVersion = "1.3.50"
 
         // Koin
-        koinVersion = '2.0.1'
-        mockkVersion = '1.9.3'
+        koinVersion = "2.0.1"
+        mockkVersion = "1.9.3"
 
         // Testing
         junitVersion = "4.12"
+        extJunitVersion = "1.1.1"
+        androidTestVersion = "1.2.0"
         mockitoVersion = "2.24.0"
+        espressoTestVersion = "3.2.0"
+        fragmentTestVersion = "1.1.0"
+        uiAutomatorTestVersion = "2.2.0"
+        annotationTestVersion = "1.1.0"
 
         // Extensions
         ktxVersion = "1.1.0"
 
         // KTX extensions
-        ktxCoreVersion = "1.0.2"
+        ktxCoreVersion = "1.1.0"
         ktxViewModelVersion = "2.2.0-alpha01"
         ktxFragmentVersion = "1.0.0"
     }
