--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -20,33 +20,32 @@ dependencies {
     implementation 'com.jakewharton:disklrucache:2.0.2'
     implementation 'com.google.android.exoplayer:exoplayer:r2.2.0'
     implementation 'com.andrognito.patternlockview:patternlockview:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation "androidx.appcompat:appcompat:$appCompat"
     implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.browser:browser:$androidX"
     implementation 'commons-io:commons-io:2.6'
 
-    // Dependencies for unit tests
+    // Tests
     testImplementation "junit:junit:$junitVersion"
     testImplementation "androidx.arch.core:core-testing:$archLifecycleVersion"
     testImplementation "io.mockk:mockk:$mockkVersion"
 
-    // Dependencies for instrumented tests
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    // JUnit4 Rules
-    androidTestImplementation 'androidx.test:rules:1.2.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    // Android JUnit Runner
-    androidTestImplementation 'androidx.test:runner:1.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.2.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-web:3.2.0'
-    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
-    androidTestImplementation 'androidx.annotation:annotation:1.1.0'
+    // Instrumented tests
+    androidTestImplementation "androidx.test:core:$androidTestVersion"
+    androidTestImplementation "androidx.test:rules:$androidTestVersion"
+    androidTestImplementation "androidx.test:runner:$androidTestVersion"
+    androidTestImplementation "androidx.test:runner:$androidTestVersion"
+    androidTestImplementation "androidx.test.ext:junit:$extJunitVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espressoTestVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoTestVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-intents:$espressoTestVersion"
+    androidTestImplementation "androidx.test.espresso:espresso-web:$espressoTestVersion"
+    androidTestImplementation "androidx.test.uiautomator:uiautomator:$uiAutomatorTestVersion"
+    androidTestImplementation "androidx.annotation:annotation:$annotationTestVersion"
     androidTestImplementation "androidx.room:room-testing:$roomVersion"
     androidTestImplementation "androidx.arch.core:core-testing:$archLifecycleVersion"
-    androidTestImplementation ("io.mockk:mockk-android:$mockkVersion") {
+    androidTestImplementation("io.mockk:mockk-android:$mockkVersion") {
         exclude module: 'objenesis'
     }
 
@@ -67,7 +66,7 @@ dependencies {
 
     implementation "androidx.lifecycle:lifecycle-extensions:$archLifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel:$archLifecycleVersion"
-    kapt "androidx.lifecycle:lifecycle-compiler:$archLifecycleVersion"
+    kapt "androidx.lifecycle:lifecycle-common-java8:$archLifecycleVersion"
 
     implementation "androidx.room:room-runtime:$roomVersion"
     kapt "androidx.room:room-compiler:$roomVersion"
@@ -79,12 +78,6 @@ dependencies {
     implementation "androidx.core:core-ktx:$ktxCoreVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$ktxViewModelVersion"
     implementation "androidx.fragment:fragment-ktx:$ktxFragmentVersion"
-
-    // Kotlin library to mock
-    testImplementation "io.mockk:mockk:$mockkVersion"
-    androidTestImplementation ("io.mockk:mockk-android:$mockkVersion") {
-        exclude module: 'objenesis'
-    }
 }
 
 tasks.withType(Test) {
