--- a/owncloudTestUtil/build.gradle
+++ b/owncloudTestUtil/build.gradle
@@ -21,4 +21,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':owncloudDomain')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$ktxLiveData"
 }
