--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -11,7 +11,7 @@ dependencies {
     /// data and domain modules
     implementation project(':owncloudDomain')
     implementation project(':owncloudData')
-    testImplementation project(':owncloudTestUtil')
+    androidTestImplementation project(':owncloudTestUtil')
 
     /// dependencies for app building
     implementation "androidx.legacy:legacy-support-v4:$androidX"
