--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         archLifecycleVersion = "2.1.0"
         roomVersion = "2.2.2"
         appCompat = "1.1.0"
+        sqliteVersion = "2.0.1"
 
         // Kotlin
         kotlinVersion = "1.3.50"
