--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.browser:browser:$androidX"
     implementation 'commons-io:commons-io:2.6'
+    implementation "androidx.sqlite:sqlite:$sqliteVersion"
 
     // Tests
     testImplementation project(':owncloudTestUtil')
@@ -66,6 +67,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$archLifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel:$archLifecycleVersion"
     kapt "androidx.lifecycle:lifecycle-common-java8:$archLifecycleVersion"
+
+    implementation "androidx.room:room-runtime:$roomVersion"
 
     // Koin dependency injector
     implementation "org.koin:koin-androidx-viewmodel:$koinVersion"
