--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -122,8 +122,11 @@ android {
     }
 
     lintOptions {
-        abortOnError false
-        disable 'MissingTranslation'
+        abortOnError true
+        ignoreWarnings false
+
+        xmlReport false
+        htmlOutput file("../lint-app-report.html")
     }
 
     packagingOptions {
