Fix owncloudData tests

--- a/owncloudTestUtil/build.gradle
+++ b/owncloudTestUtil/build.gradle
@@ -20,6 +20,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':owncloudDomain')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$ktxLiveData"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
+    implementation "androidx.lifecycle:lifecycle-livedata:2.0.0"
 }
