--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     androidTestImplementation("io.mockk:mockk-android:$mockkVersion") {
         exclude module: 'objenesis'
     }
+    androidTestImplementation 'com.github.tmurakami:dexopener:2.0.4'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
 
     // Image loading
     implementation('com.github.bumptech.glide:glide:4.6.1') {
@@ -100,6 +102,8 @@ android {
         minSdkVersion sdkMinVersion
         targetSdkVersion sdkTargetVersion
 
+        testInstrumentationRunner "com.owncloud.android.utils.OCTestAndroidJUnitRunner"
+
         versionCode = 21300100
         versionName = "2.13.1"
 
@@ -113,8 +117,6 @@ android {
                 arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
             }
         }
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     compileOptions {
