Fix dex in data module

--- a/owncloudData/build.gradle
+++ b/owncloudData/build.gradle
@@ -25,6 +25,8 @@ android {
                 arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
             }
         }
+
+        multiDexEnabled true
     }
 
     buildTypes {
