--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
         appCompat = "1.1.0"
         sqliteVersion = "2.0.1"
         lifecycleLiveData = "2.0.0"
+        biometricVersion="1.0.1"
 
         // Kotlin
         kotlinVersion = "1.3.61"
