--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -12,6 +12,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
+    implementation 'com.github.hannesa2:githubAppUpdate:0.6'
+
     // Data and domain modules
     implementation project(':owncloudDomain')
     implementation project(':owncloudData')
@@ -124,6 +126,10 @@ android {
                 arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
             }
         }
+
+        buildConfigField "String", 'GIT_USER', "\"" + getGitUser() + "\""
+        buildConfigField "String", 'GIT_REPOSITORY', "\"" + getGitRepository() + "\""
+        buildConfigField "String", 'HTTP_LOGGING_LEVEL', "\"NONE\""  //NONE, BASIC, HEADERS, BODY
 
         manifestPlaceholders = [appAuthRedirectScheme: 'oc']
     }
@@ -265,8 +271,13 @@ static def getGitOriginRemote() {
 }
 
 static def getGitUser() {
-    def remote = getGitOriginRemote()
-    return remote.replace("https://github.com/", "").replace("/owncloud-android", "").trim()
+    def token = getGitOriginRemote().split("/")
+    return token[3]
+}
+
+static def getGitRepository() {
+    def token = getGitOriginRemote().split("/")
+    return token[4]
 }
 
 task decryptPrivate {
