no backup to have the ability to fix a damaged databse
Otherwise even after a deinstallation of the app, a damaged database is still on the filesystem and a reinstall doesn't help

overwrite allowBackup

--- a/owncloudApp/src/main/AndroidManifest.xml
+++ b/owncloudApp/src/main/AndroidManifest.xml
@@ -71,7 +71,9 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsPictureInPicture="false"
         android:theme="@style/Theme.ownCloud.Toolbar"
-        tools:targetApi="n">
+        tools:targetApi="n"
+        tools:replace="android:allowBackup"
+        android:allowBackup="false">
         <activity
             android:name=".ui.activity.SplashActivity"
             android:theme="@style/Theme.ownCloud.Splash">
