--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,9 @@ allprojects {
         maven {
             url "https://jitpack.io"
         }
+        maven {
+            url 'https://artifactory.mxtracks.info/artifactory/gradle-dev-local/'
+        }
     }
 }
 
