--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -9,7 +9,7 @@ def commitSHA1 = 'COMMIT_SHA1'
 def gitRemote = 'GIT_REMOTE'
 
 dependencies {
-    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'com.google.firebase:firebase-analytics:17.4.3'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     implementation 'com.github.hannesa2:githubAppUpdate:0.6'
@@ -32,6 +32,8 @@ dependencies {
     implementation 'commons-io:commons-io:2.6'
     implementation "androidx.sqlite:sqlite:$sqliteVersion"
     implementation "androidx.biometric:biometric:$biometricVersion"
+
+    implementation 'com.github.hannesa2:CVScanner:1.0'
 
     // Tests
     testImplementation project(':owncloudTestUtil')
