--- a/owncloudComLibrary/build.gradle
+++ b/owncloudComLibrary/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
     api 'com.gitlab.ownclouders:dav4android:oc_support_1.0.1'
     api 'com.github.hannesa2:Logcat:1.6.0'
+    api 'net.openid:appauth:0.7.1'
 }
 
 allOpen {
