Create OAuth scope param to save it in AccountManager during OAuth process

--- a/owncloudComLibrary/build.gradle
+++ b/owncloudComLibrary/build.gradle
@@ -25,6 +25,8 @@ android {
 
         versionCode = 10000401
         versionName = "1.0.4.1"
+
+        manifestPlaceholders = [appAuthRedirectScheme: 'oc']
     }
 
     lintOptions {
