Apply changes requested in code review

--- a/owncloudComLibrary/build.gradle
+++ b/owncloudComLibrary/build.gradle
@@ -26,7 +26,9 @@ android {
         versionCode = 10000401
         versionName = "1.0.4.1"
 
-        manifestPlaceholders = [appAuthRedirectScheme: 'oc']
+        // This is pretty ugly but manifest placeholders don't seem to work very well when using different modules
+        // See https://github.com/openid/AppAuth-Android/issues/325
+        manifestPlaceholders = [appAuthRedirectScheme: '']
     }
 
     lintOptions {
