Fix sample client

--- a/sample_client/build.gradle
+++ b/sample_client/build.gradle
@@ -10,6 +10,10 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 28
+
+        // This is pretty ugly but manifest placeholders don't seem to work very well when using different modules
+        // See https://github.com/openid/AppAuth-Android/issues/325
+        manifestPlaceholders = [appAuthRedirectScheme: '']
     }
 
     lintOptions {
