--- a/owncloudData/src/main/AndroidManifest.xml
+++ b/owncloudData/src/main/AndroidManifest.xml
@@ -1,2 +1,4 @@
 <manifest package="com.owncloud.android.data"
-    />
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+</manifest>
