Add account creation methods to OCLocalAuthenticationDataSource

--- a/owncloudData/src/main/AndroidManifest.xml
+++ b/owncloudData/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest package="com.owncloud.android.data"
     xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
 </manifest>
