--- a/owncloudApp/src/main/AndroidManifest.xml
+++ b/owncloudApp/src/main/AndroidManifest.xml
@@ -263,6 +263,8 @@
         <activity android:name=".ui.activity.FingerprintActivity" />
         <activity
             android:name=".presentation.ui.authentication.LoginActivity"
+            android:exported="true"
+            android:launchMode="singleTask"
             android:theme="@style/Theme.ownCloud.Toolbar">
         </activity>
     </application>
