--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -109,6 +109,8 @@ allOpen {
 android {
     compileSdkVersion sdkCompileVersion
 
+    ndkVersion '21.3.6528147'
+
     defaultConfig {
         minSdkVersion sdkMinVersion
         targetSdkVersion sdkTargetVersion
