Update versionCode and versionName

--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -106,8 +106,8 @@ android {
 
         testInstrumentationRunner "com.owncloud.android.utils.OCTestAndroidJUnitRunner"
 
-        versionCode = 21400200
-        versionName = "2.14.2"
+        versionCode = 21400201
+        versionName = "2.15-beta.1"
 
         buildConfigField "String", gitRemote, "\"" + getGitOriginRemote() + "\""
         buildConfigField "String", commitSHA1, "\"" + getLatestGitHash() + "\""
