--- a/.github/workflows/Android-CI.yml
+++ b/.github/workflows/Android-CI.yml
@@ -8,10 +8,11 @@ jobs:
   Build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2.1.1
         with:
           submodules: true
           fetch-depth: 0 # 0 indicates all history
+      - run: git fetch --all || echo "==> Accept any result"
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
@@ -26,10 +27,11 @@ jobs:
   Espresso:
     runs-on: macOS-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v2.1.1
         with:
           submodules: true
           fetch-depth: 0 # 0 indicates all history
+      - run: git fetch --all || echo "==> Accept any result"
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
