--- a/owncloudComLibrary/build.gradle
+++ b/owncloudComLibrary/build.gradle
@@ -7,7 +7,7 @@ dependencies {
     api 'com.squareup.okhttp3:okhttp:4.6.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
     api 'com.gitlab.ownclouders:dav4android:oc_support_2.1.5'
-    api 'com.github.hannesa2:Logcat:1.6.0'
+    api 'com.github.AppDevNext.Logcat:LogcatCore:2.1.1'
     api 'net.openid:appauth:0.7.1'
 
     // Moshi
