--- a/.github/workflows/Android-CI.yml
+++ b/.github/workflows/Android-CI.yml
@@ -43,12 +43,15 @@ jobs:
           disable-animations: true
           arch: x86_64
           profile: Nexus 6
-          script: |
-            adb logcat -c
-            adb logcat *:E &
-            ./gradlew cAT
+          script: ./gradlew cAT
       - uses: actions/upload-artifact@v2
         if: failure()
         with:
           name: owncloudApp-Espresso-test-report
           path: ${{ github.workspace }}/owncloudApp/build/reports/androidTests/connected/*
+      - name: Save logcat output
+        uses: actions/upload-artifact@master
+        if: failure()
+        with:
+          name: ownCloud-logcat
+          path: artifacts/logcat.log
