--- a/owncloudDomain/build.gradle
+++ b/owncloudDomain/build.gradle
@@ -47,7 +47,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appCompat"
 
     // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
 
     // Dependencies for unit tests
     testImplementation "junit:junit:$junitVersion"
