--- a/owncloudTestUtil/build.gradle
+++ b/owncloudTestUtil/build.gradle
@@ -20,6 +20,6 @@ android {
 dependencies {
     implementation project(':owncloudDomain')
     implementation project(':owncloud-android-library:owncloudComLibrary')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycleLiveData"
 }
