--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     }
     androidTestImplementation 'com.github.tmurakami:dexopener:2.0.4'
     androidTestImplementation 'androidx.test:runner:1.3.0'
+    debugImplementation 'androidx.fragment:fragment-testing:1.2.5'
 
 }
 
