initial introduction of githubCI

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,3 @@
+rootProject.name = 'ownCloud library'
+
 include ':owncloudApp', ':owncloudDomain', ':owncloudData', ':owncloud-android-library:owncloudComLibrary', ':owncloudTestUtil'
