--- a/owncloudApp/src/main/AndroidManifest.xml
+++ b/owncloudApp/src/main/AndroidManifest.xml
@@ -263,5 +263,16 @@
             android:launchMode="singleTask"
             android:theme="@style/Theme.ownCloud.Toolbar">
         </activity>
+
+        <activity
+            android:name="net.openid.appauth.RedirectUriReceiverActivity"
+            tools:node="replace">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data android:scheme="@string/oauth2_redirect_uri_scheme"/>
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
