--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -21,9 +21,9 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appCompat"
     implementation 'com.getbase:floatingactionbutton:1.10.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation "androidx.browser:browser:1.2.0"
+    implementation "androidx.browser:browser:1.3.0"
     implementation 'commons-io:commons-io:2.8.0'
-    implementation "androidx.sqlite:sqlite:$sqliteVersion"
+    implementation "androidx.sqlite:sqlite-ktx:$sqliteVersion"
     implementation "androidx.biometric:biometric:$biometricVersion"
 
     // Image loading
@@ -81,7 +81,7 @@ dependencies {
     }
     androidTestImplementation 'com.github.tmurakami:dexopener:2.0.5'
     androidTestImplementation 'androidx.test:runner:1.3.0'
-    debugImplementation "androidx.fragment:fragment-testing:1.3.0-beta01"
+    debugImplementation "androidx.fragment:fragment-testing:1.3.0-rc01"
 
 }
 
