--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -27,9 +27,7 @@ dependencies {
     implementation "androidx.biometric:biometric:$biometricVersion"
 
     // Image loading
-    implementation('com.github.bumptech.glide:glide:4.6.1') {
-        exclude group: "com.android.support"
-    }
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
 
     // CustomTabs required for OAuth2 and OIDC.
     implementation "androidx.browser:browser:1.3.0"
