--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
 
         // Kotlin
         kotlinVersion = "1.4.30"
-        coroutinesVersion = "1.4.2-native-mt"
+        coroutinesVersion = "1.4.2"
 
         // Koin
         koinVersion = "2.1.5"
