--- a/owncloudComLibrary/build.gradle
+++ b/owncloudComLibrary/build.gradle
@@ -25,8 +25,8 @@ android {
         minSdkVersion 21
         targetSdkVersion 29
 
-        versionCode = 10000901
-        versionName = "1.0.10-beta.1"
+        versionCode = 10001000
+        versionName = "1.0.10"
     }
 
     lintOptions {
