--- a/owncloudApp/build.gradle
+++ b/owncloudApp/build.gradle
@@ -94,8 +94,8 @@ android {
 
         testInstrumentationRunner "com.owncloud.android.utils.OCTestAndroidJUnitRunner"
 
-        versionCode = 21600001
-        versionName = "2.17-beta.1"
+        versionCode = 21700000
+        versionName = "2.17"
 
         buildConfigField "String", gitRemote, "\"" + getGitOriginRemote() + "\""
         buildConfigField "String", commitSHA1, "\"" + getLatestGitHash() + "\""
