--- a/owncloudApp/src/main/AndroidManifest.xml
+++ b/owncloudApp/src/main/AndroidManifest.xml
@@ -58,19 +58,19 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.USE_FINGERPRINT" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
-    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES"/>
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
     <application
         android:name=".MainApp"
+        android:allowBackup="false"
         android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:manageSpaceActivity="com.owncloud.android.ui.activity.ManageSpaceActivity"
-        android:resizeableActivity="true"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:supportsPictureInPicture="false"
         android:requestLegacyExternalStorage="true"
+        android:resizeableActivity="true"
+        android:supportsPictureInPicture="false"
         android:theme="@style/Theme.ownCloud.Toolbar"
-        android:allowBackup="false"
         tools:targetApi="n">
         <activity
             android:name=".ui.activity.SplashActivity"
@@ -83,8 +83,7 @@
         <activity
             android:name=".ui.activity.FileDisplayActivity"
             android:theme="@style/Theme.ownCloud.Toolbar.Drawer"
-            android:windowSoftInputMode="adjustPan">
-        </activity>
+            android:windowSoftInputMode="adjustPan" />
         <activity android:name=".ui.activity.ManageAccountsActivity" />
         <activity
             android:name=".ui.activity.ReceiveExternalFilesActivity"
@@ -144,13 +143,11 @@
             android:permission="android.permission.BIND_JOB_SERVICE" />
         <service
             android:name=".files.services.CameraUploadsSyncJobService"
-            android:permission="android.permission.BIND_JOB_SERVICE"
-            android:exported="true">
-        </service>
+            android:exported="true"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
         <service
             android:name=".files.services.AvailableOfflineSyncJobService"
-            android:permission="android.permission.BIND_JOB_SERVICE">
-        </service>
+            android:permission="android.permission.BIND_JOB_SERVICE" />
 
         <provider
             android:name=".providers.FileContentProvider"
@@ -158,8 +155,7 @@
             android:enabled="true"
             android:exported="true"
             android:label="@string/sync_string_files"
-            android:syncable="true"
-            />
+            android:syncable="true" />
         <provider
             android:name="com.owncloud.android.presentation.providers.sharing.UsersAndGroupsSearchProvider"
             android:authorities="@string/search_suggest_authority"
@@ -212,8 +208,7 @@
             android:theme="@style/Theme.ownCloud.Toolbar.Drawer" />
         <activity
             android:name=".ui.activity.WhatsNewActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            />
+            android:configChanges="keyboardHidden|orientation|screenSize" />
 
         <receiver
             android:name=".broadcastreceivers.ConnectivityActionReceiver"
